# btc-liquidation-predictor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SESSION_SUMMARY.md  config.py  pipeline.txt  pyproject.toml  requirements.txt
collector/: db.py  main.py  requirements.txt  rest_basis.py  rest_funding.py  rest_oi.py  rest_premium_index.py  ws_aggtrade.py  ws_kline.py  ws_liquidation.py  ws_orderbook.py  ws_spot_aggtrade.py
data/: paper_trades.csv
docker/: Dockerfile  docker-compose.yml
feature_engine/: build_features.py  debug_check.py  feat_aggtrade.py  feat_basis.py  feat_funding.py  feat_liquidation.py  feat_oi.py  feat_orderbook.py  feat_price.py  feat_spot_aggtrade.py  label_builder.py  load_data.py  run.py
ml/: auto_train.py  predict.py  requirements.txt  train.py
notebooks/: model_comparison.ipynb  model_selection.ipynb
scripts/: benchmark_models.py  generate_fake_data.py  live_predict.py  monitor_short.py  rebuild_features.py  signal_validator.py  start_sol.sh
server/: manage.py  requirements.txt
server/btc_dashboard/: asgi.py  settings.py  urls.py
server/dashboard/: apps.py  broadcaster.py  consumers.py  data_reader.py  urls.py  views.py
server/static/css/: style.css
server/static/js/: app.js  chart.js  signal.js  trades.js
server/templates/dashboard/: index.html
signal/: notifier.py  paper_log.py  run.py
tests/: conftest.py  generate_fake_data.py  run_tests.sh
tests/integration/: test_api.py
tests/unit/: test_data_reader.py  test_paper_log.py  test_predict.py
