[project]
name = "btc-liq-predictor"
version = "0.2.0"
description = "Real-time BTC cascade liquidation prediction — RandomForest, 1-minute pipeline, 1/2/3m horizons"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "pytest-django", "flake8", "jupyter"]

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes= ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --tb=short"

[tool.flake8]
max-line-length = 100
ignore = ["E501", "W503"]
exclude = [".venv", "__pycache__", "ml/artifacts", "data"]
